--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,7 @@
 .container {
   padding: 0 2rem;
+  background-image: url('/background.webp');
+  background-size: cover;
 }
 
 .main {
@@ -43,6 +45,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  font-weight: 700;
 }
 
 .title,
@@ -113,6 +116,20 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.logininput{
+  margin-top: 3px;
+  margin-bottom: 3px;
+  width: 100%;
+}
+.loginbutton{
+  margin-top: 3px;
+  margin-bottom: 3px;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
+  width: 100%;
+  background-color: rgb(0, 183, 255);
 }
 
 @media (prefers-color-scheme: dark) {
