--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,3 +39,15 @@ a {
   width: 100%;
   background-color: rgb(0, 183, 255);
 }
+.super-app-theme--check{
+  background-color:rgb(253, 227, 189);
+}
+.super-app-theme--new{
+  background-color: rgb(224, 240, 253);
+}
+.super-app-theme--fine{
+  background-color:rgb(187, 255, 118);
+}
+.super-app-theme--paid{
+  background-color:rgb(200, 142, 255);
+}
