--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,17 +27,17 @@ a {
 }
 
 .logininput{
-  margin-top: 3px;
-  margin-bottom: 3px;
-  width: 100%;
+  margin-top: 3px !important;
+  margin-bottom: 3px !important;
+  width: 100% !important;
 }
 .loginbutton{
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-top: 0.8rem;
-  padding-bottom: 0.8rem;
-  width: 100%;
-  background-color: rgb(0, 183, 255);
+  margin-top: 3px !important;
+  margin-bottom: 3px !important;
+  padding-top: 0.8rem !important;
+  padding-bottom: 0.8rem !important;
+  width: 100% !important;
+  background-color: rgb(0, 183, 255) !important;
 }
 .super-app-theme--check{
   background-color:rgb(253, 227, 189);
